fix layout on mobile and start mocking about page

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,16 +4,6 @@ body {
   font-weight: 400;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-picture img {
-  margin: -300px 0 0 0;
-}
-
 .hidden {
   visibility: "hidden";
 }
